force-app/main/default/objects/DSALES_Matriz_de_Cotizacion__c/DSALES_Matriz_de_Cotizacion__c.object-meta.xml
<CustomObject>
    <label>Matriz Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SKU</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matriz Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>