force-app/main/default/objects/DSALES_Matriz_de_Cotizacion__c/fields/DSALES_ID_Matriz_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ID_Matriz_GEX__c</fullName>
    <displayFormat>A-{00000}</displayFormat>
    <label>ID Matriz</label>
    <type>AutoNumber</type>
</CustomField>