force-app/main/default/objects/DSALES_Matriz_de_Cotizacion__c/fields/DSales_Matriz_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSales_Matriz_GEX__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matriz</label>
    <referenceTo>DSales_Matriz_GEX__c</referenceTo>
    <relationshipLabel>Matriz Items</relationshipLabel>
    <relationshipName>Matriz_Items</relationshipName>
    <type>Lookup</type>
</CustomField>