force-app/main/default/objects/DSALES_Matriz_de_Cotizacion__c/fields/DSALES_MatrizItemClone__c.field-meta.xml
<CustomField>
    <fullName>DSALES_MatrizItemClone__c</fullName>
    <externalId>true</externalId>
    <label>Matriz Item</label>
    <length>18</length>
    <type>Text</type>
</CustomField>