force-app/main/default/objects/DSALES_Matriz_de_Cotizacion__c/fields/DSALES_Rango_Superior_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Rango_Superior_GEX__c</fullName>
    <label>Rango Superior</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>