force-app/main/default/objects/DSALES_Matriz_de_Cotizacion__c/fields/DSALES_Tiempo_de_Garantia_Extendida_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tiempo_de_Garantia_Extendida_GEX__c</fullName>
    <label>Tiempo de Garantía Extendida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_Tiempodegarantaextendida</valueSetName>
    </valueSet>
</CustomField>