force-app/main/default/objects/DSALES_Matriz_de_Cotizacion__c/fields/SALES_Precio_GEX__c.field-meta.xml
<CustomField>
    <fullName>SALES_Precio_GEX__c</fullName>
    <label>Precio</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>