force-app/main/default/objects/DSALES_Matriz_de_Cotizacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DSALES_ID_Matriz_GEX__c</columns>
    <columns>DSales_Matriz_GEX__c</columns>
    <columns>DSALES_MatrizItemClone__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>